[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Some functions about CPE and CVE"
edition = "2021"
keywords = ["nvd", "cve", "cpe", "match", "cpe23uri"]
license-file = "LICENSE"
name = "nvd"
readme = "README.md"
repository = "https://github.com/zgj0315/nvd/"
version = "0.1.1"

[[bin]]
name = "cve"
path = "src/cve.rs"

[dependencies]
chrono = "0.4"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
num_cpus = "1.14"
prost = "0.11"
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
tokio = {version = "1.23", features = ["macros", "rt", "rt-multi-thread", "fs"]}

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
harness = false
name = "cpe_match_benchmark"
