[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Some functions about CPE and CVE"
documentation = "https://docs.rs/nvd"
edition = "2021"
keywords = ["nvd", "cve", "cpe", "match", "cpe23uri"]
license-file = "LICENSE"
name = "nvd"
readme = "README.md"
repository = "https://github.com/zgj0315/nvd/"
version = "0.1.14"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
], optional = true }
dev_util = "0.1"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
num_cpus = "1.14"
prost = "0.13"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.23", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "fs",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
xml-rs = "0.8"
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strict = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }

[[bench]]
harness = false
name = "cpe_match_benchmark"

[features]
default = ["clap"]
clap = ["dep:clap"]
